--- a/FrontEnd/src/index.html
+++ b/FrontEnd/src/index.html
@@ -3,17 +3,16 @@
 
 <head>
   <meta charset="utf-8">
-  <title>FrontEnd</title>
+  <title>RadwebStarterkit</title>
   <base href="/">
 
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0 maximum-scale=1.0">
+  
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 
 <body>
-  
-    <app-root></app-root>
-  
+  <app-root></app-root>
 </body>
 
 </html>
