--- a/FrontEnd/src/index.html
+++ b/FrontEnd/src/index.html
@@ -3,12 +3,15 @@
 
 <head>
   <meta charset="utf-8">
-  <title>RadwebStarterkit</title>
+  <title>Northwind Web</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0 maximum-scale=1.0">
   
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"> 
+  
+
 </head>
 
 <body>
