--- a/FrontEnd/src/index.html
+++ b/FrontEnd/src/index.html
@@ -1,24 +1,16 @@
 <!doctype html>
 <html lang="en">
-
 <head>
   <meta charset="utf-8">
   <title>Northwind Web</title>
   <base href="/">
-
   <meta name="viewport" content="width=device-width, initial-scale=1.0 maximum-scale=1.0">
-  
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <!-- <link rel="stylesheet" href="fonts/fonts.css">
   <link rel="stylesheet" href="fonts/iconfont/material-icons.css"> -->
-  
-  <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
- 
 </head>
-
-<body>
+<body class="mat-typography">
   <app-root></app-root>
 </body>
-
 </html>
